# psammophis

./: Cargo.toml  README.md
Lib/: zipimport.py
cli/: main.rs
snippets/: open_file.py
src/: capabilities.rs  lib.rs  vm.rs
src/stdlib/: io.rs
tests/: snippets.rs
tests/common/: mod.rs
